--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "start": "node backend/src/index.js",
+        "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
         "heroku-postbuild": "npm install --prefix backend && npm install --prefix frontend"
     },
     "main": "index.js",
