--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "name": "bitmedia-tech-task",
     "version": "1.0.0",
     "scripts": {
-        "start": "node backend/src/index.js",
-        "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-        "heroku-postbuild": "npm install --prefix backend && npm install --prefix frontend"
+        "start": "node backend/index.js",
+        "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend"
     },
     "main": "index.js",
     "repository": {
